Closed Bug 977596 Opened 10 years ago Closed 10 years ago

Fix build failure on flatfish (gonk JB4.2)

Categories

(Core :: Graphics: Layers, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: sotaro, Assigned: sotaro)

Details

Attachments

(1 file, 2 obsolete files)

+++ This bug was initially created as a clone of Bug #977393 +++

Change of Bug 957323 breaks flatfish(gonk JB4.2) build.
Assignee: nobody → sotaro.ikeda.g
Confirmed the fix on flatfish.
Attachment #8383153 - Flags: review?(jmuizelaar)
Comment on attachment 8383153 [details] [diff] [review]
patch - Fix build failure on flatfish

Review of attachment 8383153 [details] [diff] [review]:
-----------------------------------------------------------------

::: gfx/layers/opengl/GrallocTextureClient.cpp
@@ +222,3 @@
>    if (mReleaseFenceHandle.IsValid()) {
>      android::sp<Fence> fence = mReleaseFenceHandle.mFence;
> +#if ANDROID_VERSION == 17

// 1000 is what Android uses.
Attachment #8383153 - Flags: review?(jmuizelaar) → review+
> -----------------------------------------------------------------
> 
> ::: gfx/layers/opengl/GrallocTextureClient.cpp
> @@ +222,3 @@
> >    if (mReleaseFenceHandle.IsValid()) {
> >      android::sp<Fence> fence = mReleaseFenceHandle.mFence;
> > +#if ANDROID_VERSION == 17
> 
> // 1000 is what Android uses.

It is a timeout until output warning log. I am going update the comment.
Apply the comment. Carry "jmuizelaar: review+".
Attachment #8383153 - Attachment is obsolete: true
Attachment #8383262 - Flags: review+
Attachment #8383262 - Attachment is obsolete: true
Attachment #8383264 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/bb2d3f0b068b
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: