Bug 977596 - Fix build failure on flatfish r=jmuizelaar